/*
 * This file is part of Celestial (https://github.com/OpenFogStack/celestial).
 * Copyright (c) 2021 Tobias Pfandzelter, The OpenFogStack Team.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * This program is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 **/

syntax = "proto3";

package openfogstack.celestial.peering;
option go_package = "./;peering";

service Peering {
  rpc StartPeer(StartPeerRequest) returns (Empty);
  rpc Route(RouteRequest) returns (Empty);
}

message Empty {}

message Machine {
  // allow -1 for ground stations
  int64 shell = 1;
  uint64 id = 2;
  // name is only used for ground stations
  string name = 3;
}

message StartPeerRequest {
  string publickey = 1;
  uint64 index = 2;
}

message RouteRequest {
  Machine machine = 1;
  uint64 index = 2;
  uint64 bandwidth = 3;
}
